--- a/tupystock_app/pubspec.yaml
+++ b/tupystock_app/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/tupy-schroeder-sc.gif
 
   # To add assets to your application, add an assets section, like this:
   # assets:
